Add exercise for testing componentDidUpdate()

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <main id="main">
     </main>
+    <div class="pusheen-container"><img src="./assets/pusheen.jpeg" height="100px" width="100px" id="pusheen" /></div>
     <!-- Open this file and call `mocha.run()` in console to run tests -->
     <div id="mocha"></div>
     <script src="node_modules/mocha/mocha.js"></script>
