Add a section for componentWillUpdate

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div id="progress-bar" class="off"></div>
     <main id="main">
     </main>
     <div class="pusheen-container"><img src="./assets/pusheen.jpeg" height="100px" width="100px" id="pusheen" /></div>
