--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="progress-bar" class="off"></div>
     <main id="main">
     </main>
-    <div class="pusheen-container"><img src="./assets/pusheen.jpeg" height="100px" width="100px" id="pusheen" /></div>
+    <div class="pikachu-container"><img src="./assets/pikachu.jpg" height="100px" width="100px" id="pikachu" /></div>
     <!-- Open this file and call `mocha.run()` in console to run tests -->
     <div id="mocha"></div>
     <script src="node_modules/mocha/mocha.js"></script>
