--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>React Rendering</title>
+    <title>React Rendering Lab</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="node_modules/mocha/mocha.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="node_modules/mocha/mocha.css" />
   </head>
   <body>
-    <div id="progress-bar" class="off"></div>
     <main id="main">
     </main>
-    <div class="pikachu-container"><img src="./assets/pikachu.jpg" height="100px" width="100px" id="pikachu" /></div>
+    <!-- Don't forget to include React dependencies! -->
     <!-- Open this file and call `mocha.run()` in console to run tests -->
     <div id="mocha"></div>
     <script src="node_modules/mocha/mocha.js"></script>
     <script src="node_modules/expect/umd/expect.min.js"></script>
     <script>mocha.setup('bdd');</script>
-
-    <script src="bundle.js"></script>
+    <script src="test/index-test.js"></script>
   </body>
 </html>
