--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="node_modules/mocha/mocha.css" />
   </head>
   <body>
-    <main id="main">
+    <div id="progress-bar" class="off"></div>
+    <main id="root">
     </main>
+    <div class="pikachu-container">
+      <img src="../assets/pikachu.jpg" height="100px" width="100px" id="pikachu" />
+    </div>
     <!-- Don't forget to include React dependencies! -->
     <!-- Open this file and call `mocha.run()` in console to run tests -->
     <div id="mocha"></div>
