--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="../src/style.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -16,7 +17,11 @@
     <title>React Rendering Lab</title>
   </head>
   <body>
+    <div id="progress-bar" class="off"></div>
     <div id="root"></div>
+    <div class="pikachu-container">
+      <img src="%PUBLIC_URL%/pikachu.jpg" height="100px" width="100px" id="pikachu" />
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
