udpated packages to react 16, new webpack, babel env and stage-1, new enzyme environment. switched root to global

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div id="progress-bar" class="off"></div>
-    <div id="root"></div>
+    <div id="global"></div>
     <div class="pikachu-container">
       <img src="%PUBLIC_URL%/pikachu.jpg" height="100px" width="100px" id="pikachu" />
     </div>
