tests for animation and pikachu added

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <body>
     <div id="progress-bar" class="off"></div>
     <div id="global"></div>
-    <div class="pikachu-container">
+    <div id="pikachu-container">
       <img src="%PUBLIC_URL%/pikachu.jpg" height="100px" width="100px" id="pikachu" />
     </div>
     <!--
